--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "devDependencies": {
         "@tailwindcss/ui": "^0.6.0",
         "axios": "^0.19",
+        "bootstrap": "^4.4.1",
         "cross-env": "^7.0",
+        "jquery": "^3.5.1",
         "laravel-mix": "^5.0.1",
         "lodash": "^4.17.19",
+        "popper.js": "^1.16.1",
         "postcss-import": "^12.0.1",
         "resolve-url-loader": "^3.1.0",
         "tailwindcss": "^1.8.0"
