--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
         "popper.js": "^1.16.1",
         "postcss-import": "^12.0.1",
         "resolve-url-loader": "^3.1.0",
-        "tailwindcss": "^1.8.0"
+        "sass": "^1.27.0",
+        "sass-loader": "^8.0.2",
+        "tailwindcss": "^1.8.0",
+        "vue-template-compiler": "^2.6.12"
     }
 }
