--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=9cc057237eec4150e26b5baa38ae8c0a",
+    "/css/app.css": "/css/app.css?id=f0f6721fcf587e214c3d8b318fb67713"
 }
