--- a/package.json
+++ b/package.json
@@ -1,23 +1,21 @@
 {
     "private": true,
     "scripts": {
-        "dev": "npm run development",
-        "development": "mix",
-        "watch": "mix watch",
-        "watch-poll": "mix watch -- --watch-options-poll=1000",
-        "hot": "mix watch --hot",
-        "prod": "npm run production",
-        "production": "mix --production"
+        "dev": "vite",
+        "build": "vite build"
     },
     "devDependencies": {
+        "@defstudio/vite-livewire-plugin": "^1.3.2",
         "@alpinejs/trap": "^3.7.0",
         "@tailwindcss/forms": "^0.5.2",
-        "@tailwindcss/typography": "^0.5.0",
+        "@tailwindcss/typography": "^0.5.9",
         "alpinejs": "^3.7.0",
-        "axios": "^0.21",
-        "laravel-mix": "^6.0.6",
+        "autoprefixer": "^10.4.2",
+        "axios": "^1.1.2",
+        "laravel-vite-plugin": "^0.8.0",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
-        "tailwindcss": "^3.1.7"
+        "tailwindcss": "^3.1.7",
+        "vite": "^4.4.9"
     }
 }
